cd to action directory Update action.yml

--- a/action.yml
+++ b/action.yml
@@ -12,6 +12,9 @@ inputs:
 runs: 
   using: "Composite"
   steps:
+  - id: cd
+    run: |
+      cd .\${{ github.action_path }}
   - id: license-report
     run: |
       .\${{ github.action_path }}\M365-License-Checker.ps1 -tenant_id ${{ inputs.tenant_id }} >> $GITHUB_OUTPUT
