--- a/action.yml
+++ b/action.yml
@@ -15,6 +15,7 @@ runs:
   - id: cd
     run: |
       echo ${{ github.action_path }} 
+      cd ${{ github.action_path }} 
     shell: PowerShell
   - id: license-report
     run: |
