--- a/action.yml
+++ b/action.yml
@@ -19,6 +19,5 @@ runs:
       ls 
     shell: PowerShell
   - id: license-report
-    run: |
-      .\${{ github.action_path }}\M365-License-Checker.ps1 -tenant_id ${{ inputs.tenant_id }} >> $GITHUB_OUTPUT
+    run: .\${{ github.action_path }}\M365-License-Checker.ps1 -tenant_id ${{ inputs.tenant_id }} >> $GITHUB_OUTPUT
     shell: PowerShell
