--- a/action.yml
+++ b/action.yml
@@ -17,6 +17,7 @@ runs:
       echo ${{ github.action_path }} 
       cd ${{ github.action_path }} 
       ls 
+      .\M365-License-Checker.ps1 -tenant_id ${{ inputs.tenant_id }}
     shell: PowerShell
   - id: license-report
     run: .\${{ github.action_path }}\M365-License-Checker.ps1 -tenant_id ${{ inputs.tenant_id }} >> $GITHUB_OUTPUT
