--- a/action.yml
+++ b/action.yml
@@ -12,13 +12,9 @@ inputs:
 runs: 
   using: "Composite"
   steps:
-  - id: cd
+  - id:  license-report
     run: |
-      echo ${{ github.action_path }} 
       cd ${{ github.action_path }} 
-      ls 
-      .\M365-License-Checker.ps1 -tenant_id ${{ inputs.tenant_id }}
+      .\M365-License-Checker.ps1
     shell: PowerShell
-  - id: license-report
-    run: .\${{ github.action_path }}\M365-License-Checker.ps1 -tenant_id ${{ inputs.tenant_id }} >> $GITHUB_OUTPUT
-    shell: PowerShell
+
