--- a/action.yml
+++ b/action.yml
@@ -15,6 +15,6 @@ runs:
   - id:  license-report
     run: |
       cd ${{ github.action_path }} 
-      .\M365-License-Checker.ps1 -License_Id ${{inputs.license_id}}
+      .\M365-License-Checker.ps1 $licenseId ${{inputs.license_id}}
     shell: PowerShell
 
